--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,11 @@
 blank_issues_enabled: false
 contact_links:
   - name: "Report a Security Vulnerability or Risk"
-    url: "https://github.com/canvas-ac"
+    url: "https://github.com/edunorm"
     about: "If you find a dangerous Security Vulnerability, please email us in stead."
-  - name: "Get a Quote"
-    url: "https://canvas.ac/hiring"
-    about: "Hire us for your project"
-  - name: "Job Opportunities"
-    url: "https://canvas.ac/careers"
-    about: "Work with or at canvas"
+  # - name: "Get a Quote"
+  #   url: "https://edunorm/hiring"
+  #   about: "Hire us for your project"
+  # - name: "Job Opportunities"
+  #   url: "https://edunorm/careers"
+  #   about: "Work with or at edunorm"
