--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -8,4 +8,4 @@ contact_links:
   #   about: "Hire us for your project"
   # - name: "Job Opportunities"
   #   url: "https://edunorm/careers"
-  #   about: "Work with or at edunorm"
+  #   about: "Work with or at Edunorm"
